small fixed on content and style

--- a/hexcode.html
+++ b/hexcode.html
@@ -9,10 +9,10 @@
   <body>
     <div class="container">
       <div class="hex-wrapper">
-        <p>Background Color: <span class="hex"><span></p>
+        <p>Background Color Hex Code: <span class="hex"><span></p>
       </div>
 
-      <button onclick="changeBg();" class="btn">Generate Hex Code</button>
+      <button onclick="changeBg();" class="btn">Change the body background Color</button>
     </div>
 
     <script src="hexCodeGenerator.js"></script>
