no major changes

--- a/hexcode.html
+++ b/hexcode.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="hex-wrapper">
-        <p>Background Color Hex Code: <span class="hex"><span></p>
+        <p>background color hex code: <span class="hex"><span></p>
       </div>
 
       <button onclick="changeBg();" class="btn">Change the body background Color</button>
